@@ -6,7 +6,7 @@ perldir = @PERLPATH@/EBox/MailFilter/Model
 nobase_perl_DATA =   AmavisConfiguration.pm AmavisPolicy.pm ExternalMTA.pm ExternalDomain.pm \
                      FileExtensionACL.pm MIMETypeACL.pm \
                     AntispamConfiguration.pm AntispamACL.pm AntispamTraining.pm \
-                    VDomains.pm \
+                    VDomains.pm AntispamVDomainACL.pm\
                     POPProxyConfiguration.pm
 
 EXTRA_DIST = $(nobase_perl_DATA)
