@@ -1,5 +1,7 @@
 HEAD
-       + Fixed bug when retrieving LDAP instance in master/slave architecture
+       + Fixed bug when retrieving LDAP instance in master/slave
+       architecture
+       + Fixed bug we dont have duplicates entries in vdomain and global ACLs anymore
 1.3.6
 	+ adapted to changes in LDAP schemas managament
 	+ Bugfix: adapted to changes in EBox::Ldap API
